<resources>
    <string name="app_name">КассаТакси</string>
    <string name="kassa">Касса</string>
    <string name="taxi">Такси</string>
    <string name="work_in_taxi">работай в такси!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_agreement">Нажимая на кнопку, я даю согласие на обработку персональных данных, соглашаюсь с <a href="https://kassa.taxi/privacy">политикой конфиденциальности</a> и принимаю условия <a href="https://kassa.taxi/agreement">лицензионного соглашения</a>.</string>
    <string name="login_btn">Войти</string>
    <string name="login_agreement_title">Подтверждаю свое согласие на обработку и хранение моих персональных данных в соответствии с пользовательским соглашением</string>
    <string name="accept_conditions_error">Необходимо принять условия работы</string>
    <string name="input_field_error">Заполните поле</string>
    <string name="wrong_format_error">Неправильный формат</string>
    <string name="intro_message">Удобные выплаты для водителей с баланса агрегаторов такси на личный счет</string>
    <string name="registration">Регистрация</string>
    <string name="input_phone_number">Введите номер телефона</string>
    <string name="phone_start_symbols">+7 (</string>
    <string name="input_code">Введите код из СМС</string>
    <string name="continue_hint">Далее</string>
    <string name="register_application">Заявка на подключение</string>
    <string name="register_application_success">Заявка на подключение отправлена!</string>
    <string name="application_success_message">В ближайшее время наш оператор свяжется с вами по телефону</string>
    <string name="no_notifications">Пока нет уведомлений</string>
    <string name="notification">Уведомление</string>
    <string name="clear">Ясно!</string>
    <string name="ok_keyboard">OK</string>
    <string name="ok">Хорошо</string>
    <string name="back">Назад</string>
    <string name="close">Закрыть</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="exit">Выход</string>
    <string name="balance">Баланс</string>
    <string name="orders">Заказы</string>
    <string name="withdrawal_applications">Заявки на вывод</string>
    <string name="accounts_and_cards">Счета и карты</string>
    <string name="support_service">Служба поддержки</string>
    <string name="support_service_message">Звонок в службу поддержки бесплатный, нажмите кнопку согласия если вы столкнулись с проблемой, которую необходимо решить.</string>
    <string name="exit_message">Вы действительно хотите выйти?</string>
    <string name="call">Вызов</string>
    <string name="cancel">Отмена</string>
    <string name="not_find_call_app">Не найдено приложение для совершения звонков</string>
    <string name="profile_format">+%s</string>
    <string name="internet_unavailable">Интернет недоступен</string>
    <string name="all_partners_sum">Общая сумма по всем партнерам</string>
    <string name="yandex_title">Яндекс.Такси</string>
    <string name="citymobil_title">Ситимобил</string>
    <string name="gett_title">Gett taxi</string>
    <string name="rosneft_title">Роснефть</string>
    <string name="withdraw">Вывести</string>
    <string name="replenish">Пополнить</string>
    <string name="balance_format">%s ₽</string>
    <string name="fuel_title">Топливо</string>
    <string name="fuel_replenish">Пополнение топлива</string>
    <string name="fuel_replenish_success">Спасибо! \n Баланс топлива пополнен</string>
    <string name="choose_aggregator">Выберите агрегатор</string>
    <string name="enter_charge_amount">Введите сумму списания</string>
    <string name="withdraws_title">Заявки на вывод</string>
    <string name="withdraw_title">Заявка на вывод</string>
    <string name="withdraw_create_title">Вывод средств</string>
    <string name="withdrawal_title">Выводится</string>
    <string name="commission_title">Комиссия</string>
    <string name="with_commission">с учетом комиссии</string>
    <string name="connect_account">Подключить счёт</string>
    <string name="transfer_amount">Сумма перевода</string>
    <string name="enter_amount">Укажите сумму</string>
    <string name="amount_in_rubles">Сумма перевода в рублях</string>
    <string name="send_request">Отправить заявку</string>
    <string name="no_withdrawal_requests">Нет заявок на вывод</string>
    <string name="enter_sum_error">Введите сумму</string>
    <string name="input_error">Ошибка ввода</string>
    <string name="withdraw_format">%s₽</string>
    <string name="withdraw_create_format">Баланс: %s₽</string>
    <string name="account_balance_format">Баланс счета: %s ₽</string>
    <string name="bank_card">Банковская карта</string>
    <string name="no_withdrawal_message">Чтобы выводить средства, подключите хотя бы один счет и создайте заявку</string>
    <string name="daily_withdrawal_message">Вывод на любую карту. За вывод 1%. Перевод происходит один раз в день. Только в будни!</string>
    <string name="instant_withdrawal_message">Выводить средства можно на любую банковскую карту. За вывод взимается 4 % с суммы вывода.</string>
    <string name="what_is_it">Что это такое?</string>
    <string name="select_account">Выберите счёт</string>
    <string name="daily_withdraw_hint">Для совершения операции вам необходимо добавить информацию о счете, куда будут зачислены средства</string>
    <string name="withdraw_hint">Перевод будет осуществлен со счета:</string>
    <string name="min_sum_hint">Минимальная сумма 1000₽</string>
    <string name="call_to_dispatcher">Позвонить диспетчеру</string>
    <string name="call_to_dispatcher_message">Для совершения операции вам необходимо позвонить диспетчеру и он внесет информацию о вашей карте, куда будут зачислены средства</string>
    <string name="select_card">Выберите карту</string>
    <string name="transfer">Перевести</string>
    <string name="thanks_request_accepted">Спасибо! \n Заявка на вывод средств принята!</string>
    <string name="accounts_title">Счета и карты</string>
    <string name="accounts">Счета</string>
    <string name="cards">Карты</string>
    <string name="daily_withdrawal">Ежедневный вывод</string>
    <string name="instant_withdrawal">Моментальный вывод</string>
    <string name="account_added">Спасибо! \n Новый счёт добавлен</string>
    <string name="add_account">Добавить счет</string>
    <string name="add_card">Добавить карту</string>
    <string name="add_new_card">+ Добавить новую карту</string>
    <string name="add_button_text">Добавить</string>
    <string name="understand">Понятно</string>
    <string name="delete_account">Удаление счета</string>
    <string name="delete_card">Удаление карты</string>
    <string name="delete_account_message">Вы действительно хотите удалить этот счет?</string>
    <string name="delete_card_message">Вы действительно хотите удалить эту карту?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="first_name">Имя</string>
    <string name="middle_name">Отчество (если имеется)</string>
    <string name="surname">Фамилия</string>
    <string name="payment_account">Расчетный счет</string>
    <string name="bik">БИК</string>
    <string name="fill_all_fields">Заполните все поля</string>
    <string name="enter_card_number">Введите номер карты</string>
    <string name="account_number_hint">Введите 20-значный номер</string>
    <string name="card_adding_hint">Добавление новой карты возможно только через звонок диспетчеру</string>
    <string name="card_added">Карта добавлена</string>
    <string name="new_card_message">Для перевода средств достаточно ввести только номер вашей карты</string>
    <string name="add_card_message">Добавить новую карту возможно по звонку диспетчеру.</string>
    <string name="order_format">Р/с %s</string>
    <string name="accounts_message">Вы можете добавить свой счет, куда будут переводиться средства. Счет действует только на ежедневный перевод.</string>
    <string name="daily_withdrawal_dialog_message">Вывод на любую карту. За вывод 1%. Перевод происходит один раз в день. Только в будни! В Субботу , воскресенье и официальные праздничные дни переводов нет!
    Заявки на вывод, которые были оставлены в приложении до 12:00 дня, будут обработаны этим же днём. Поступление денежных средств происходит ближе к 18:00 вечера. В очень редких случаях до 20:00 вечера.
    Напоминаем, что обязательный остаток в программе 500 рублей. Выводить средства можно от 1000 рублей.
    </string>
    <string name="instant_withdrawal_dialog_message">Выводить средства можно на любую банковскую карту. За вывод взимается 4 % с суммы вывода.
    \n\nНапоминаем,что обязательный остаток в программе 500 рублей.Выводить средства можно  от 1000 рублей. Просим обратить внимание,что в день вы можете вывести не более 10.000 рублей(это временная мера).
    </string>
    <string name="info_unavailable">Информация временно недоступна</string>
    <string name="total_with_commission">Итог с учетом комиссии:</string>
    <string name="complete">Выполнено</string>
    <string name="canceled">Отменено</string>
    <string name="order">Заказ</string>
    <string name="route">Маршрут</string>
    <string name="received_from_customer">Получено от клиента</string>
    <string name="tariff_for_drivers">Тариф для водителей</string>
    <string name="tip">Чаевые</string>
    <string name="aggregator_commission">Комиссия агрегаторов</string>
    <string name="our_commission">Наша комиссия</string>
    <string name="total">Итог</string>
    <string name="order_balance_format">Итог: %s₽</string>
    <string name="select_registration_variant">Выберите один из двух вариантов регистрации</string>
    <string name="intro_registration_message"><![CDATA[Вы впервые у нас? Пройдите, пожалуйста, <font color=\"#F1C46E\">регистрацию.</font> Если вы уже работаете с нами, выполните вход, нажав кнопку <font color=\"#F1C46E\">“Войти”</font>]]></string>
    <string name="set_phone_number">Указать номер телефона</string>
    <string name="download_documents">Загрузить документы</string>
    <string name="or">Или</string>
    <string name="connection">Подключение</string>
    <string name="connection_terms">Условия подключения</string>
    <string name="connection_conditions_title">У нас лучшие условия подключения!</string>
    <string name="view_terms"><u>Ознакомиться с условиями</u></string>
    <string name="submit">Отправить</string>
    <string name="write_to_us">Напишите нам</string>
    <string name="write_message_title">Здравствуйте. Вам есть что сообщить нам?</string>
    <string name="symbols_max_text">до 200 символов</string>
    <string name="thanks_title">Спасибо!\n\nВаше сообщение отправлено</string>
    <string name="success_message">Наш сотрудник перезвонит вам в ближайшее время</string>
    <string name="back_to_main_screen">Вернуться на главный экран</string>
</resources>