<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_intro">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/intro_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_app_logo" />

        <TextView
            android:id="@+id/kassa_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/raleway"
            android:text="@string/kassa"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/taxi_title"
            app:layout_constraintStart_toStartOf="@+id/image_view"
            app:layout_constraintTop_toBottomOf="@+id/image_view" />

        <TextView
            android:id="@+id/taxi_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/raleway"
            android:text="@string/taxi"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_24sp"
            app:layout_constraintEnd_toEndOf="@+id/image_view"
            app:layout_constraintStart_toEndOf="@+id/kassa_title"
            app:layout_constraintTop_toBottomOf="@+id/image_view" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/work_in_taxi"
            android:textAlignment="center"
            android:textColor="@color/registration_white_color"
            android:textSize="@dimen/text_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kassa_title" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/margin_24dp"
            android:layout_marginEnd="@dimen/margin_24dp"
            android:layout_marginBottom="@dimen/margin_24dp"
            android:background="@drawable/bg_intro_btn"
            android:fontFamily="sans-serif-medium"
            android:text="@string/login_btn"
            android:textAllCaps="false"
            android:textColor="@color/continue_color"
            android:textSize="@dimen/text_20sp"
            app:layout_constraintBottom_toTopOf="@+id/signup_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/margin_24dp"
            android:layout_marginEnd="@dimen/margin_24dp"
            android:layout_marginBottom="46dp"
            android:background="@drawable/bg_registration_btn"
            android:fontFamily="sans-serif-medium"
            android:text="@string/registration"
            android:textAllCaps="false"
            android:textColor="@color/white_code_text"
            android:textSize="@dimen/text_20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>