<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:fillViewport="true">

    <androidx.constraintlayout.motion.widget.MotionLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutDescription="@xml/fragment_registration_scene">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4dp"
            android:layout_marginTop="12dp"
            android:background="?attr/selectableItemBackground"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/registration_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:text="@string/registration"
            android:textColor="@color/gray_intro_text"
            android:textSize="@dimen/text_24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/registration_variants_tv"
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/select_registration_variant"
            android:textColor="@color/gray_profile"
            android:textSize="@dimen/text_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_tv" />

        <Button
            android:id="@+id/set_phone_number_button"
            android:layout_width="336dp"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/margin_64dp"
            android:background="@drawable/bg_intro_btn"
            android:text="@string/set_phone_number"
            android:textAllCaps="false"
            android:textColor="@color/continue_color"
            android:textSize="@dimen/text_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_variants_tv" />

        <TextView
            android:id="@+id/or_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/or"
            android:textColor="@color/agreement_text_color"
            android:textSize="@dimen/text_13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_phone_number_button" />

        <Button
            android:id="@+id/download_documents_button"
            android:layout_width="336dp"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:background="@drawable/bg_intro_btn"
            android:text="@string/download_documents"
            android:textAllCaps="false"
            android:textColor="@color/continue_color"
            android:textSize="@dimen/text_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/or_tv" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_64dp"
            android:layout_marginEnd="@dimen/margin_24dp"
            android:background="@color/gray_registration_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/download_documents_button" />

        <TextView
            android:id="@+id/connection_conditions_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/connection_conditions_title"
            android:textColor="@color/registration_white_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line" />

        <TextView
            android:id="@+id/view_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/margin_8dp"
            android:text="@string/view_terms"
            android:textColor="@color/yellow_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/connection_conditions_title" />

    </androidx.constraintlayout.motion.widget.MotionLayout>

</androidx.core.widget.NestedScrollView>